update article.html & blog.html

--- a/article.html
+++ b/article.html
@@ -72,7 +72,11 @@
 <!-- END of SLIDE IMAGE -->
 		<div id="breadcrum" class="col-md-12 nopadding post">
 			<div class="container ">
-				<h1><a href="blog.html">Blog Bài Viết</a></h1>
+				<ol class="breadcrumb nopadding" style="font-size: 17px; margin:10px 0px;">
+				  <li><a href="#">Home</a></li>
+				  <li><a href="#">Blog</a></li>
+				  <li class="active">Chia sẻ kinh nghiệm</li>
+				</ol>
 			</div>
 		</div>
 <!-- MAIN CONTENT -->
@@ -82,113 +86,34 @@
 				<div class="col-md-8">
 					<div class="col-md-12 blog-article post nopadding">
 						<header class="col-md-12 nopadding">
-							<h2>
+							<h1>
 								<a href="article.html" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
-							</h2>
+							</h1>
 						</header>
-						<figure class="col-md-12 nopadding" style="max-height: 250px; overflow:hidden">
-								<a href="article.html" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/blog-image.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
+						
+						<figure class="col-md-12 nopadding" style="">
+								<img src="img/blog-image.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên">
 							</figure>
 						<div class="col-md-12 nopadding">
-							<article class="nopadding">	
-								<p>Wafer apple pie tiramisu. Pie chocolate bar pie soufflé. Jelly chocolate donut marzipan. Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton<br/>Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton</p>
+							<article class="">	
+								<p>Lorem ipsum dolor sit amet, clita appareat cu mei. Mea eu atqui scribentur, ut dolore vivendo adolescens sea. Nec cu nibh fabellas. Mutat mollis convenire cu sit. Eam commune constituto an, mea noluisse persequeris an. At nostrum conceptam vel, mel elit nonumy alienum te.<br/><br/>
+
+Ex pro augue cetero tibique. Duo id ceteros intellegam, ut duo paulo luptatum. Id sit veniam impetus. Has vidit oportere scriptorem ne, ad wisi aliquando est, pri discere constituto no. Nonumes platonem adversarium nam in, eu epicuri expetenda pri. Vero legendos ne per, sed ex verterem sapientem, mei insolens antiopam an.<br/><br/>
+								<img src="img/img3.jpg" height="1175" width="1600" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên">
+Cum ei viderer mediocritatem, et nec dolore equidem accusamus. Pro ea fabulas detracto, porro nostro dissentias usu ex. Ferri disputationi quo cu. Et mel homero noster nostro. Usu te veri summo, ullum detraxit adipiscing eu cum, in per unum magna. At wisi accumsan vis, vim at wisi alienum.<br/><br/>
+
+Idque semper malorum cu quo, in movet iuvaret tibique his. Inermis indoctum mel at, at soluta primis mucius est, semper adolescens ne vis. Eam mutat tractatos temporibus ut. Te choro graeco cum.<br/><br/>
+
+Sea dicunt causae dolores ex, ut dolore possit salutandi pro. Affert graeci consequat nam ne. Ne sea delenit laoreet complectitur. Ut vel solet indoctum inciderint, vivendo petentium et sea, in sit oratio efficiantur. No sit veritus alienum, in eos zril iriure delenit. At mel purto appetere.</p>
 
 							</article>
 						</div>
 						<div class="info-bar col-md-12 nopadding">
 							<a class="btn info-button" href="#"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
 							<a class="hidden-xs btn info-button" href="#"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
-							<a class="pull-right btn btn-primary"  href="article.html">Read more</a>
+							<a class="btn info-button" href="#"><span class="glyphicon glyphicon-tag"></span> Chia sẻ kinh nghiệm</a>
 						</div>
-					</div>
-					<div class="col-md-12 blog-article post nopadding">
-						<header class="col-md-12 nopadding">
-							<h2>
-								<a href="article.html" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
-							</h2>
-						</header>
-						<figure class="col-md-12 nopadding" style="max-height: 250px; overflow:hidden">
-								<a href="article.html" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/blog-image.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
-							</figure>
-						<div class="col-md-12 nopadding">
-							<article class="nopadding">	
-								<p>Wafer apple pie tiramisu. Pie chocolate bar pie soufflé. Jelly chocolate donut marzipan. Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton<br/>Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton</p>
-
-							</article>
-						</div>
-						<div class="info-bar col-md-12 nopadding">
-							<a class="btn info-button" href="#"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
-							<a class="hidden-xs btn info-button" href="#"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
-							<a class="pull-right btn btn-primary"  href="article.html">Read more</a>
-						</div>
-					</div>
-					<div class="col-md-12 blog-article post nopadding">
-						<header class="col-md-12 nopadding">
-							<h2>
-								<a href="article.html" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
-							</h2>
-						</header>
-						<figure class="col-md-12 nopadding" style="max-height: 250px; overflow:hidden">
-								<a href="article.html" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/blog-image.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
-							</figure>
-						<div class="col-md-12 nopadding">
-							<article class="nopadding">	
-								<p>Wafer apple pie tiramisu. Pie chocolate bar pie soufflé. Jelly chocolate donut marzipan. Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton<br/>Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton</p>
-
-							</article>
-						</div>
-						<div class="info-bar col-md-12 nopadding">
-							<a class="btn info-button" href="#"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
-							<a class="hidden-xs btn info-button" href="#"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
-							<a class="pull-right btn btn-primary"  href="article.html">Read more</a>
-						</div>
-					</div>
-					<div class="col-md-12 blog-article post nopadding">
-						<header class="col-md-12 nopadding">
-							<h2>
-								<a href="article.html" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
-							</h2>
-						</header>
-						<figure class="col-md-12 nopadding" style="max-height: 250px; overflow:hidden">
-								<a href="article.html" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/blog-image.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
-							</figure>
-						<div class="col-md-12 nopadding">
-							<article class="nopadding">	
-								<p>Wafer apple pie tiramisu. Pie chocolate bar pie soufflé. Jelly chocolate donut marzipan. Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton<br/>Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton</p>
-
-							</article>
-						</div>
-						<div class="info-bar col-md-12 nopadding">
-							<a class="btn info-button" href="#"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
-							<a class="hidden-xs btn info-button" href="#"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
-							<a class="pull-right btn btn-primary"  href="article.html">Read more</a>
-						</div>
-					</div>
-
-					<!-- PAGINATION -->
-					<div class="col-md-12">
-						<nav>
-						  <ul class="pagination">
-						    <li>
-						      <a href="#" aria-label="Previous">
-						        <span aria-hidden="true">&laquo;</span>
-						      </a>
-						    </li>
-						    <li><a href="#">1</a></li>
-						    <li><a href="#">2</a></li>
-						    <li><a href="#">3</a></li>
-						    <li><a href="#">4</a></li>
-						    <li><a href="#">5</a></li>
-						    <li>
-						      <a href="#" aria-label="Next">
-						        <span aria-hidden="true">&raquo;</span>
-						      </a>
-						    </li>
-						  </ul>
-						</nav>
-					</div>
-					<!-- END of PAGINATION -->
-
+					</div>	
 				</div>
 				<div class="col-md-4 rightbar hidden-sm hidden-xs">
 					  <div class="col-md-12 search-box">
@@ -202,7 +127,7 @@
 					  </div><!-- /.col-lg-6 -->
 					  <div class="col-md-12 rightbar-content">
 					  	<div class="col-md-12" style="margin-top:30px">
-					  		<span><h6>Bài viết xem nhiều</h6></span>
+					  		<span><h6>Bài viết liên quan</h6></span>
 							<ul class="list-unstyled" style="font-size:18px; margin-top:20px">
 								<li style="padding:10px 0; border-bottom: 1px dotted #ccc;"><a href="article.html"><h2 style="margin:0">Ngâm mình học tiếng anh</h2></a></li>
 								<li style="padding:10px 0; border-bottom: 1px dotted #ccc;"><a href="article.html"><h2 style="margin:0">Phương pháp học tiếng anh hiệu quả</h2></a></li>
