--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 								</a>
 							</li>
 							<li class="dropdown">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown</a>
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Blog Chia Sẻ</a>
 								<ul class="dropdown-menu" role="menu">
-									<li><a href="blog.html">Bài viết</a></li>
-									<li><a href="#">Another action</a></li>
-									<li><a href="#">Something else here</a></li>
+									<li><a href="blog.html">Chia Sẻ Kinh Nghiệm</a></li>
+									<li><a href="blog.html">Bí Quyết Học Anh Văn</a></li>
 								</ul>
 							</li>
 							<li>
@@ -146,7 +145,7 @@
 			<!-- TOP CONTENT -->
 			<div class="container top-content nopadding ">
 				<article class="content-graph col-md-4 post">
-					<a title="GIỚI THIỆU AMEROVIET" href="#">
+					<a title="GIỚI THIỆU AMEROVIET" href="article.html">
 						<img  src="img/Earth@2x.png" width="60%" alt="time">
 						<h3 class="top-content-title">GIỚI THIỆU AMEROVIET</h3>
 
@@ -154,7 +153,7 @@
 					</a>
 				</article>
 				<article class="content-graph col-md-4 post">
-					<a title="PHƯƠNG PHÁP GIẢNG DẠY" href="#">
+					<a title="PHƯƠNG PHÁP GIẢNG DẠY" href="article.html">
 						<img  src="img/Pensils@2x.png" width="60%" alt="time">
 						<h3 class="top-content-title">PHƯƠNG PHÁP GIẢNG DẠY</h3>
 
@@ -162,7 +161,7 @@
 					</a>
 				</article>
 				<article class="content-graph col-md-4 post">
-					<a title="ĐỘI NGŨ GIẢNG VIÊN" href="#">
+					<a title="ĐỘI NGŨ GIẢNG VIÊN" href="article.html">
 						<img  src="img/Earth@2x.png" width="60%" alt="time">
 						<h3 class="top-content-title">ĐỘI NGŨ GIẢNG VIÊN</h3>
 
@@ -207,22 +206,22 @@
 		</div>
 <!-- END of MIDDLE CONTENT BOTTOM -->
 		<div class="col-md-12 bottom-content nopadding ">
-			<div class="container">
+			<div class="container nopadding">
 				<div class="col-md-12 blog-title post">
 					<hr>
-					<h3 style="font-weight:500">BLOG TIẾNG ANH</h3>
+					<h3>BLOG TIẾNG ANH</h3>
 					<caption>Chia sẻ kinh nghiệm trong việc học tiếng Anh</caption>
 				</div>
 				<div class="col-md-12 nopadding">
 					<div class="col-md-6 bottom-content-article post">
 						<header class="col-md-12 nopadding">
 							<h2>
-								<a href="#" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
+								<a href="article.html" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
 							</h2>
 						</header>
 						<div class="col-md-12 nopadding">
 							<figure class="pull-left ">
-								<a href="#" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/watch-270x270.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
+								<a href="article.html" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/watch-270x270.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
 							</figure>
 							<article class="nopadding">	
 								<p>Wafer apple pie tiramisu. Pie chocolate bar pie soufflé. Jelly chocolate donut marzipan. Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton</p>
@@ -230,20 +229,20 @@
 							</article>
 						</div>
 						<div class="info-bar col-md-12 nopadding">
-							<a style="background-color:none" class="btn" href="#"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
-							<a style="background-color:none" class="hidden-xs btn" href="#"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
-							<a class="pull-right btn btn-primary"  href="#">Read more</a>
+							<a class="btn info-button" href="article.html"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
+							<a class="hidden-xs btn info-button" href="article.html"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
+							<a class="pull-right btn btn-primary"  href="article.html">Read more</a>
 						</div>
 					</div>
 					<div class="col-md-6 bottom-content-article post">
 						<header class="col-md-12 nopadding">
 							<h2>
-								<a href="#" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
+								<a href="article.html" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
 							</h2>
 						</header>
 						<div class="col-md-12 nopadding">
 							<figure class="pull-left ">
-								<a href="#" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/watch-270x270.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
+								<a href="article.html" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/blog-image2.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
 							</figure>
 							<article class="nopadding">	
 								<p>Wafer apple pie tiramisu. Pie chocolate bar pie soufflé. Jelly chocolate donut marzipan. Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton</p>
@@ -251,20 +250,20 @@
 							</article>
 						</div>
 						<div class="info-bar col-md-12 nopadding">
-							<a style="background-color:none" class="btn" href="#"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
-							<a style="background-color:none" class="hidden-xs btn" href="#"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
-							<a class="pull-right btn btn-primary"  href="#">Read more</a>
+							<a class="btn info-button" href="article.html"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
+							<a class="hidden-xs btn info-button" href="article.html"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
+							<a class="pull-right btn btn-primary"  href="article.html">Read more</a>
 						</div>
 					</div>
 					<div class="col-md-6 bottom-content-article post">
 						<header class="col-md-12 nopadding">
 							<h2>
-								<a href="#" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
+								<a href="article.html" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
 							</h2>
 						</header>
 						<div class="col-md-12 nopadding">
 							<figure class="pull-left ">
-								<a href="#" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/watch-270x270.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
+								<a href="article.html" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/blog-image.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
 							</figure>
 							<article class="nopadding">	
 								<p>Wafer apple pie tiramisu. Pie chocolate bar pie soufflé. Jelly chocolate donut marzipan. Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton</p>
@@ -272,20 +271,20 @@
 							</article>
 						</div>
 						<div class="info-bar col-md-12 nopadding">
-							<a style="background-color:none" class="btn" href="#"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
-							<a style="background-color:none" class="hidden-xs btn" href="#"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
-							<a class="pull-right btn btn-primary"  href="#">Read more</a>
+							<a class="btn info-button" href="article.html"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
+							<a class="hidden-xs btn info-button" href="article.html"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
+							<a class="pull-right btn btn-primary"  href="article.html">Read more</a>
 						</div>
 					</div>
 					<div class="col-md-6 bottom-content-article post">
 						<header class="col-md-12 nopadding">
 							<h2>
-								<a href="#" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
+								<a href="article.html" title="Super Fast Loading">Ngâm mình học Tiếng Anh - Tâm lí học viên</a>
 							</h2>
 						</header>
 						<div class="col-md-12 nopadding">
 							<figure class="pull-left ">
-								<a href="#" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/watch-270x270.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
+								<a href="article.html" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"><img src="img/watch-270x270.jpg" class="img-responsive" alt="Super Fast Loading" title="Ngâm mình học Tiếng Anh - Tâm lí học viên"></a>
 							</figure>
 							<article class="nopadding">	
 								<p>Wafer apple pie tiramisu. Pie chocolate bar pie soufflé. Jelly chocolate donut marzipan. Chupa chups tootsie roll toffee dessert muffin apple pie. Sweet liquorice jelly beans oat cake oat cake unerdwear.com marshmallow fruitcake. Cookie lollipop carrot cake bear claw cotton</p>
@@ -293,9 +292,9 @@
 							</article>
 						</div>
 						<div class="info-bar col-md-12 nopadding">
-							<a style="background-color:none" class="btn" href="#"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
-							<a style="background-color:none" class="hidden-xs btn" href="#"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
-							<a class="pull-right btn btn-primary"  href="#">Read more</a>
+							<a class="btn info-button" href="article.html"><span class="glyphicon glyphicon-user"></span> Amero Việt</a>
+							<a class="hidden-xs btn info-button" href="article.html"><span class="glyphicon glyphicon-time"></span> April 4, 2014</a>
+							<a class="pull-right btn btn-primary"  href="article.html">Read more</a>
 						</div>
 					</div>
 				</div>
